--- a/final-capstone/java/pom.xml
+++ b/final-capstone/java/pom.xml
@@ -15,7 +15,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>11</java.version>
+        <java.version>8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <jjwt.version>0.11.1</jjwt.version>
@@ -103,7 +103,19 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-        </plugins>
+
+        <plugin>
+            <groupId> com.heroku.sdk </groupId>
+            <artifactId> heroku-maven-plugin </artifactId>
+            <version> 3.0.4 </version>
+            <configuration>
+                <appName> unique-name </appName>
+                <processTypes>
+                    <web> java $JAVA_OPTS -Dserver.port=$PORT -cp target/classes:target/dependency/* com.techelevator.Application </web>
+                </processTypes>
+            </configuration>
+        </plugin>
+    </plugins>
     </build>
 
 </project>
